    words, cruise_config.rb can be placed directly into the version control and obtained from there.
  - Build Now button changes buider state to 'build requested' immediately upon click 
  - [bugfix] dashboard doesn't load cruise_config.rb, and therefore is not affected by errors in it
  - [bugfix] --username and --password options in add_project didn't work

------------------------------------------------------------------------------------------------------------------------
* 0.5.0
  - IMPORTANT: working directory renamed from 'builds' to 'projects'
  - drill down from error message to to source code  
  - when builder detects a change to cruise_config.rb, it automatically reloads the project (no need to restart
    the builder)
  - 'cruise start' starts dashboard and all project builders (unless -e development or --without-builders option is
    specified)
  - 'cruise start' starts dashboard in production environment. Use 'cruise start -e development' for development.
  - more, and better, documentation
  - plugin for sending build notices as instant messages via Jabber protocol (should work with IRC, ICQ, Yahoo, MSN,
    Google Talk or anything else that has a Jabber transport).
  - 'build add' does not create cruise_config.rb, and therefore does not write down SVN user/password (relying on
    password caching and/or key-based authentication and/or read-only anonymous access.  
  - builder plugins receive build_broken and build_fixed events when build status goes from green to red and vice versa
  - RSS feed
  - default SVN polling interval changed to 30 seconds  
  - dashboard displays who committed and their comments
  - dashboard displays how much time did it take to perform a build
  - [bugfix] Debug-level messages are logged in development mode
  - [bugfix] Running builder doesn't block the dashboard on Windows
  - [bugfix] Test Failure Parser correctly parses failure messages from Mocha