@@ -6,6 +6,7 @@ TRUNK
   - Build Now button changes buider state to 'build requested' immediately upon click 
   - [bugfix] dashboard doesn't load cruise_config.rb, and therefore is not affected by errors in it
   - [bugfix] --username and --password options in add_project didn't work
+  - [bugfix] Rendering of long lines in build log on IE
 
 ------------------------------------------------------------------------------------------------------------------------
 * 0.5.0
